# gtree

./: CMakeLists.txt  Config.cmake.in  build.js  encoding.txt  env.sh  gulpfile.js  index.js  make.js  package-lock.json  package.json
example/: custom_class.cpp  nums.cpp  string_or_uint.cpp  write_nums.cpp
include/gulachek/: cause.hpp  gtree.hpp
include/gulachek/gtree/: base128.hpp  basic_itreem.hpp  bfs.hpp  block.hpp  child_reader.hpp  declare_member_functions.hpp  decoding.hpp  dynamic_tree.hpp  encoding.hpp  error.hpp  fd.hpp  fd_itreem.hpp  fd_otreem.hpp  flat_tree.hpp  gnatz_iter.hpp  gnatz_reader.hpp  gnatz_tree_builder.hpp  gnatz_writer.hpp  gtree_reader.hpp  gtree_writer.hpp  ignore.hpp  is_itreem.hpp  is_otreem.hpp  itreem.hpp  mutable_tree.hpp  my_same_as.hpp  node.hpp  otreem.hpp  read.hpp  translate.hpp  tree.hpp  tree_base.hpp  treed.hpp  write.hpp
include/gulachek/gtree/asio/: error.hpp  gnatz_reader.hpp  gtree_reader.hpp  memory_message_reader.hpp  memory_read_stream.hpp  treeder.hpp
include/gulachek/gtree/encoding/: class.hpp  conversion_encoding.hpp  dictionary.hpp  empty.hpp  encoding.hpp  enum.hpp  float.hpp  function.hpp  fusion.hpp  list.hpp  map.hpp  optimization_type.hpp  optional.hpp  pair.hpp  polymorphic_variant.hpp  set.hpp  shared_pointer.hpp  shared_ptr.hpp  signed.hpp  string.hpp  string_view.hpp  tree.hpp  tuple.hpp  twos_complement.hpp  unsigned.hpp  variant.hpp  vector.hpp
posix/gulachek/gtree/asio/: stdin_stream.hpp
src/: base128.cpp  block.cpp  cause.cpp  dynamic_tree.cpp  error.cpp  fd.cpp  fd_itreem.cpp  flat_tree.cpp  gtree.cpp  itreem.cpp  optimization_type.cpp  translate.cpp  tree.cpp  twos_complement.cpp
test/: async_gnatz_reader_test.cpp  async_gtree_reader_test.cpp  async_treeder_test.cpp  base128_test.cpp  bfs_test.cpp  class_encoding_test.cpp  dictionary_encoding_test.cpp  dynamic_tree_test.cpp  empty_encoding_test.cpp  enum_encoding_test.cpp  enum_test.cpp  error_test.cpp  flat_tree_test.cpp  float_encoding_test.cpp  float_test.cpp  function_test.cpp  fusion_encoding_test.cpp  fusion_test.cpp  gnatz_iter_test.cpp  gnatz_reader_test.cpp  gnatz_tree_builder_test.cpp  gnatz_writer_test.cpp  gtree_reader_test.cpp  gtree_writer_test.cpp  list_test.cpp  map_encoding_test.cpp  map_test.cpp  memory_message_reader_test.cpp  memory_read_stream_test.cpp  mutable_tree_test.cpp  optimization_type_test.cpp  optional_encoding_test.cpp  optional_test.cpp  pair_encoding_test.cpp  pair_test.cpp  pointer_encoding_test.cpp  polymorphic_variant_encoding_test.cpp  read_test.cpp  set_encoding_test.cpp  set_test.cpp  (+20 more)
test/include/: convert.hpp  copy_tree.hpp  null_tree.hpp  saboteur.hpp  string_tree.hpp
tools/: gnz2dec.cpp  gtree2hex.cpp  nums.cpp
